Make use of new Java language features
This cleans up the java code a bit.